--- a/estilo.css
+++ b/estilo.css
@@ -8,8 +8,8 @@ body{
 	font-family: Courier New, Monaco, monospace;
 	margin: 0;
 	min-height: 100%;
-  	display: flex;
-  	flex-direction: column;
+  display: flex;
+	flex-direction: column
 }
 
 html {
@@ -52,7 +52,7 @@ a{
 
 #area-cardapio{
 	background-color: #FED4A0;
-	width: 920px;
+	width: 69%;
 	margin: 100px auto;
 	padding: 15px;
 }
@@ -61,22 +61,22 @@ a{
 	background: white;
 	width: 200px;
 	height: 370px;
-	margin: 15px;
-	padding: 35px;
+	margin: 18px;
+	padding: 33px;
 	padding-bottom: 30px;
 	display: inline-block;
 }
 
 #area-principal{
 	height: 350px;
-	width: 920px;
+	width: 69%;
 	margin: auto;
 	padding: 15px;
 }
 
 #formatação-preços{
 	background: #FED4A0;
-	width: 450px;
+	width: 430px;
 	height: 250px;
 	margin-top: 35px;
 	margin-bottom: 0;
@@ -92,6 +92,20 @@ a{
 	height: 40px;
 	float: right;
 	margin-top: 30px;
+	margin-bottom: 0;
+}
+
+
+#formatação2{
+	background-image: url('imagens/fundo2.jpeg');
+	background-repeat: no-repeat;
+	width: 410px;
+	height: 300px;
+	float: right;
+	clear: both;
+	position: relative;
+	bottom: 280px;
+	left: 15px;
 	margin-bottom: 0;
 }
 
@@ -153,19 +167,6 @@ a{
 	position: relative;
 	left: 50px;
 	
-}
-
-#formatação2{
-	background-image: url('imagens/fundo2.jpeg');
-	background-repeat: no-repeat;
-	width: 410px;
-	height: 300px;
-	float: right;
-	clear: both;
-	position: relative;
-	bottom: 280px;
-	left: 15px;
-	margin-bottom: 0;
 }
 
 #formatação-link{
