--- a/estilo2.css
+++ b/estilo2.css
@@ -6,6 +6,9 @@
 body{
 	background: #FFFFFF;
 	font-family: Courier New, Monaco, monospace;
+	min-height: 100%;
+    display: flex;
+	flex-direction: column
 }
 
 /* layout */
@@ -44,7 +47,7 @@ a{
 
 #area-contato{
 	background-image: url('imagens/fundo3.jpg');
-	width: 1349px;
+	width: 100%;
 	margin-top: 70px;
 	height: 500px;
 	float: none;
