--- a/estilo2.css
+++ b/estilo2.css
@@ -46,24 +46,21 @@ a{
 }
 
 #area-contato{
-	background-image: url('imagens/fundo3.jpg');
+	background-image: url('imagens/fundo2.jpg');
+	background-size: cover;
 	width: 100%;
 	margin-top: 70px;
 	height: 500px;
-	float: none;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .informações{
-	width: 300px;
-	height: 150px;
-	float: left;
-	position: relative;
-	top: 80px;
-	left: 27px;
-	margin: 15px;
-	padding: 50px;
-	padding-top: 30px;
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 #rodapé{
@@ -85,33 +82,95 @@ a{
 /* formatações gerais */
 
 h1{
+	display: flex;
+	align-self: start;
+	position: absolute;
 	font-size: 50px;
 	padding-top: 30px;
-	text-align: center;
 	font-family: FreeMono, monospace;
 }
 
 .letra{
 	color: #2A1B0A;
-	padding: 20px;
-	text-align: center;
 	font-size: 25px;
+	padding-bottom: 10px;
 }
 
 .letra2{
 	color: #2A1B0A;
-	padding: 20px;
+	padding-left: 55px;
+	padding-right: 55px;
 	text-align: center;
 	font-size: 20px;
 }
 
 .formatação-número{
 	font-size: 20px;
-	margin: 10px;
-	padding-bottom: 30px;
 	font-weight: bold;
 	text-align: center;
 	text-decoration: underline;
 }
 
+@media all and (max-width: 768px) {
+    #area-menu {
+        visibility: hidden;
+    } 
 
+    #area-cabecalho {
+        width: 100%;
+        position: relative;
+        text-align: center;
+        padding: 0px;
+    }
+
+    #formatação {
+        text-align: center;
+        margin: auto;
+        float: none;
+        transform: translateX(-5%);
+    }
+
+    #formatação-logo-rodapé {
+		visibility: hidden;
+	}
+
+	#rodapé {
+		text-align: center;
+		font-size: 12px;
+	}
+}
+
+@media all and (max-width: 870px) {
+	#area-contato {
+		display: flex;
+        flex-direction: column;
+        align-items: center;
+	}
+
+	.informações {
+		display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin: 20px;
+	}
+
+	h1 {
+		visibility: hidden;
+	}
+	.letra, .letra2, .formatação-número {
+		 font-size: 15px;
+		 margin: 0
+	}
+}
+
+@media all and (max-width: 235px) {
+	.informações {
+		margin: 0;
+	}
+
+	h1 {
+		visibility: hidden;
+		font-size: 0;
+	}
+}
