--- a/estilo.css
+++ b/estilo.css
@@ -7,15 +7,7 @@ body{
 	background: #FFFFFF;
 	font-family: Courier New, Monaco, monospace;
 	margin: 0;
-	min-height: 100%;
-  display: flex;
-	flex-direction: column
 }
-
-html {
-  height: 100%;
-}
-
 
 /* layout */
 
@@ -52,68 +44,80 @@ a{
 
 #area-cardapio{
 	background-color: #FED4A0;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 	width: 69%;
-	margin: 100px auto;
+	margin: 20px auto;
 	padding: 15px;
+	border-radius: 10px;
 }
 
 .cupcake{
 	background: white;
-	width: 200px;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 20%;
 	height: 370px;
-	margin: 18px;
+	margin: 28px;
 	padding: 33px;
 	padding-bottom: 30px;
-	display: inline-block;
+	border-radius: 10px;
 }
 
-#area-principal{
-	height: 350px;
-	width: 69%;
-	margin: auto;
-	padding: 15px;
+#area-principal {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	max-width: 100%;
 }
 
-#formatação-preços{
-	background: #FED4A0;
-	width: 430px;
-	height: 250px;
-	margin-top: 35px;
-	margin-bottom: 0;
-	float: left;
-	position: relative;
-	right: 15px;
+.container {
+	width: 400px;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	height: 200px;
+	background-color: #FED4A0;
+	color: #2A1B0A;
+	border-radius: 10px;
 }
 
-#formatação-botão{
-	background: #FED4A0;
-	border: 2px solid #2A1B0A;
-	width: 120px;
-	height: 40px;
-	float: right;
-	margin-top: 30px;
-	margin-bottom: 0;
+a button {
+	color: white;
+	background: transparent;
+	padding: 8px;
+	border-radius: 10px;
+	border: 1px solid #2A1B0A;
+	cursor: pointer;
+	font-weight: bold;
 }
 
+#lista {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-image: url("imagens/fundo.jpg");
+	width: 400px;
+	height: 200px;
+	font-size: 1.2em;
+	border-radius: 10px;
+}
 
-#formatação2{
-	background-image: url('imagens/fundo2.jpeg');
-	background-repeat: no-repeat;
-	width: 410px;
-	height: 300px;
-	float: right;
-	clear: both;
-	position: relative;
-	bottom: 280px;
-	left: 15px;
-	margin-bottom: 0;
+li {
+	padding: 10px;
+	color: #2A1B0A;
 }
 
 #rodapé{
 	background: #FED4A0;
 	height: 50px;
 	text-align: center;
-	margin-top: 30px;
+	margin-top: 50px;
 	padding: 20px;
 	color: white;
 	font-size: 20px;
@@ -131,81 +135,110 @@ a{
 .letra{
 	font-size: 15px;
 	color: #2A1B0A;
-	margin: 20px;
 	text-align: center;
 }
 
 .letra2{
 	color: #2A1B0A;
+	text-align: left;
 }
 
 #letra3{
 	color: #2A1B0A;
-	position: relative;
-	right: 15px;
-}
-
-#letra4{
-	color: #2A1B0A;
+	margin-top: 100px;
+	margin-bottom: 30px;
 	text-align: center;
-	padding: 10px;
-}
-
-.letra5{
-	font-size: 20px;
-	color: #2A1B0A;
-	padding: 10px;
-	font-weight: 900;
-	position: relative;
-	left: 30px;
-	top: 20px;
 }
 
 .formatação-imagens{
-	width: 90px;
-	height: 120px;
-	position: relative;
-	left: 50px;
-	
+	width: 50%;
+	height: 30%;
 }
 
-#formatação-link{
-	color: white;
-	font-size: 20px;
-	font-weight: bold;
-	position: relative;
-	left: 5px;
-	top: 7px;
-}
 
-#formatação-lista{
-	font-size: 23px;
-	color: #2A1B0A;
-	font-weight: bold;
-	text-align: left;
-	margin: 10px;
-	padding: 15px;
-	position: relative;
-	left: 80px;
+ul {
+	margin: 0;
 }
-
 
 h1{
+	margin-top: 100px;
 	text-align: center;
-	color: white;
-	padding: 5px;
-	padding-bottom: 30px;
+	color: #2A1B0A;
 	font-size: 30px;
 }
 
-h4{
-	font-size: 20px;
-	padding: 20px;
-	color: #2A1B0A;
+@media all and (max-width: 1080px) {
+	#area-cardapio{
+		display: flex;
+        flex-direction: column;
+        align-items: center;
+	}
+
+	.cupcake{
+		display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 40%;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	#area-principal {
+		display: flex;
+        flex-direction: column;
+        align-items: center;
+	}
+
+	.container {
+		margin-bottom: 20px;
+	}
+
+	.container, #lista {
+		width: 300px;
+		font-size: 13px;
+	}
 }
 
+@media all and (max-width: 382px) {
+	.container, #lista {
+		width: 100%;
+	}
 
+	a button {
+		padding: 3px;
+		font-size: 10px;
+	}
+	#letra3 {
+		font-size: 10px;
+	}
+	
+	#formatação-logo-rodapé {
+		visibility: hidden;
+	}
+	#rodapé {
+		text-align: center;
+		font-size: 12px;
+	}
+}
 
+@media all and (max-width: 768px) {
+    #area-menu {
+        visibility: hidden;
+    } 
 
+    #area-cabecalho {
+        width: 100%;
+        position: relative;
+        text-align: center;
+        padding: 0px;
+    }
 
-
+    #formatação {
+        text-align: center;
+        margin: auto;
+        float: none;
+        transform: translateX(-5%);
+    }
+}
